Linux build fixes

--- a/libmariadb/CMakeLists.txt
+++ b/libmariadb/CMakeLists.txt
@@ -396,6 +396,7 @@ TARGET_LINK_LIBRARIES(mariadbclient ${SYSTEM_LIBS})
 IF(UNIX)
   ADD_LIBRARY(libmariadb SHARED ${libmariadb_RC} ${MARIADB_OBJECTS} ${EMPTY_FILE})
   SET_TARGET_PROPERTIES(libmariadb PROPERTIES COMPILE_FLAGS "${CMAKE_SHARED_LIBRARY_C_FLAGS}")
+  SET_TARGET_PROPERTIES(mariadbclient PROPERTIES COMPILE_FLAGS "${CMAKE_SHARED_LIBRARY_C_FLAGS} -march=i686 -m32")
 ELSE()
   ADD_LIBRARY(libmariadb SHARED ${libmariadb_RC} mariadbclient.def)
   TARGET_LINK_LIBRARIES(libmariadb  mariadbclient)
